@@ -1,3 +1,5 @@
+* Add action to start subscription from party
+
 Version 1.3 - 2015-01-22
 Version 1.2 - 2014-07-01
 * Changelog file creation
